Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-103324

qmlls: assertion failed "ModuleIndex::qmldirsToLoad called twice" when editing a file

    XMLWordPrintable

Details

    • 9290a86ac4 (qt/qtdeclarative/dev) 9290a86ac4 (qt/tqtc-qtdeclarative/dev)

    Description

      whenever I edit any content in a QML file, qmlls crashes with assertion fault:

      ASSERT: "m_qmldirPaths.isEmpty() && "ModuleIndex::qmldirsToLoad called twice"" in file /mnt/Storage/Qt6/qt/qtdeclarative/src/qmldom/qqmldommoduleindex.cpp, line 384

      The QML file in question and a corresponding stdin input to qmlls has been provided.

      To reproduce:

      build qmlls from the latest dev branch and then:
      /path/to/qmlls < stdin.log

      Attachments

        1. stdin.log
          3 kB
        2. test.qml
          0.0 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            qtqmlteam Qt Qml Team User
            leroy Haoyu Liu
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes