qmldom: ensure that major versions of qml only modules are listed

* add list of major versions in a qmldir file
* call ensureInModuleIndex after loading a module that uses that
  qmldir
* add used qmlFiles as dependencies of the qmldir
* fix incorrect assert now triggered by TestDomItem::testLoadDep

Fixes: QTBUG-103324
Change-Id: I91a32ba5012a4c6aa303c60bc45fdf194e37183e
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>